# 3DCT

./: .gitignore  TDCT_correlation.py  TDCT_main.py  notebook.ipynb  pyproject.toml  requirements.txt  setup.cfg
tdct/: QtCustom.py  app.py  correlation.py  correlation_v2.py  io.py  util.py
tdct/tools3dct/: create_mask.py  predict_FIB.py  project_fluo.py
tdct/ui/: __init__.py  config.py  fm_import_dialog.py  test_table.py
tdct/ui/qt/: tdct_fm_import_dialog.py  tdct_fm_import_dialog.ui  tdct_main.py  tdct_main.ui
