[metadata]
name = tdct
version = 4.0.0
author = Herman Fung
author_email = n/a
description = 3d correlation toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hermankhfung/3DCT
project_urls =
    Bug Tracker = https://github.com/hermankhfung/3DCT
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent
    Framework :: napari

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    3dct_ui = TDCT_main:main
    3dct_correlation = TDCT_correlation:main
    napari_3dct = tdct.app:main

# include yaml files
[options.package_data]
* = *.yaml
